Evergreen_financial.css
/* Evergreen Financial html Styles */
* {
	margin: 0px;
	padding: 0px;
}

/* Format Navigation */
.navbar{
	 border-bottom: none;
}
body .navbar .navbar-nav {
    display: inline-block;
    float: none;
	margin: 0px;
	padding-top: 20px;
	/* Move navbar left 20ox */
	position: relative;
	right: 5%;
}
/*Format color of link text */
body .navbar .navbar-nav li a {
	color: black;
	font-size: 18px;
	font-family: Futura, Times new roman;
}
.navbar .navbar-nav li a:hover {
	color: white;
}
/*
.navbar .navbar-nav li a:visited {
	color: black;
}*/
.navbar .navbar-nav li a:active {
	color: black;
}
.navbar .navbar-collapse {
    text-align: center;

}

/* Format Navbar Logo */
#link img {
	width: 100px;
	height: auto;
}
body .navbar {
	background: none;
}
/* Active now class for navbar */
.nav-down.container-fluid ul li .active-now{
	color: white;
	border-bottom: solid 2px white;
	padding-bottom: 20px;
}
.nav-down.container-fluid ul li a {
	color: grey;
}
.nav-down {
	color: gray;
	top: 0px;
	position: fixed;
	transition: top 0.5s ease-in-out;
	-webkit-transition: top 0.5s ease-in-out;
	-moz-transition: top 0.5s ease-in-out;
	-ms-transition: top 0.5s ease-in-out;
	-o-transition: top 0.5s ease-in-out;
	width: 100%;
	background: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.3));
	background: -webkit-linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.3));
	background: -moz-linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.3));
	border-bottom: solid 1px rgba(0,0,0,0.5);
	height: 78px;
}
/* Need grey text on nav-down */
body .navbar {
	border-bottom: none;
}
.nav-up {
	position: fixed;
	top: -10px;
	transition: top 0.5s ease-in-out;
	-webkit-transition: top 0.5s ease-in-out;
	-moz-transition: top 0.5s ease-in-out;
	-ms-transition: top 0.5s ease-in-out;
	-o-transition: top 0.5s ease-in-out;
	width: 100%;
	background: none;
	border-bottom: none;
}
.nav-up #LinkedIn-profile img{
	width: 50px;
	height: 50px;
	transition: top 0.5s ease-in-out;
	-webkit-transition: top 0.5s ease-in-out;
	-moz-transition: top 0.5s ease-in-out;
	-ms-transition: top 0.5s ease-in-out;
	-o-transition: top 0.5s ease-in-out;
	top: -60px;
}

/* LinkedIn Navigation Link */
#LinkedIn-profile img{
	width: 50px;
	height: 50px;
	float: right;
	margin-top: 10px;
	margin-right: 25px;
	position: relative;
	top: -77px;
	border-radius: 40px;
	-moz-border-radius: 40px;
	-webkit-border-radius: 40px;
	border: solid 1px black;
}

/* Collapsable navigation */
#myNavbar {
	border-top: none;
}
/* Edit Hamburger */
.container-fluid button {
	position: relative;
	top: 15px;
}

/* Top Background Image Properties */
#img-top {
	background-image: url("trees_top.jpg");
	height: 800px;
	background-attachment: fixed;
	top: 0px;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}
#top-layer {
	background-color: rgba(0, 55, 0, 0.5);
    /*position: absolute;
    top: 20px;
    left: 0px;*/
    width: 100%;
    height: 800px;
}
/*
#img-top-cont #img-top a img {
	width: 75%;
	max-width: 750px;
	height: auto;
	text-align: center;
	margin-left: 12.5%;
	margin-top: 100px;
} */

/* Top Background Text styles */
#top-layer h1 {
	color: rgba(255,255,255,0.8);
	/*width: 75%;*/
	margin: auto;
	text-align: center;
	height: 100%;
	padding: 200px;
	/*line-height: 800px;*/
	font-size: 100px;
	font-family: Times New Roman, Din;
	max-width: 800px;
}
#top-layer h1 small{
	font-size: 36px;
	position: relative;
	top: -50px;
	color: grey;
	text-shadow: 0px 1px 5px rgba(0,0,0,0.5);
}

#top-layer h6 {
	color: white;
	margin: auto;
	text-align: center;
	height: 100%;
	padding: 200px;
	font-size: 24px;
	font-family: Times New Roman, Din;
}

/* Format About Content*/
#about-content {
	padding-top: 40px;
	width: 100%;
	height: 800px;
	background: #FEFEFA;
	position: relative;
	z-index:-2;
}
#header1 h2{
	width: 50%;
	margin: auto;
	text-align: center;
	font-size: 45px;
}
#line{
	width: 75px;
	height: 5px;
	display: inline-block;
	background: #FAD6A5;
	margin: auto;
	position: relative;
	z-index:-1;
	top: -15px;
	margin-right: 10px;
	margin-left: 10px;
}
#triangle{
	display: inline-block;
	width: 0;
	height: 0;
	border-left: 10px solid transparent;
	border-right: 10px solid transparent;
	border-top: 20px solid #FAD6A5;
	margin: auto;
}
#center{
	text-align: center;
}

/* Format Team Content*/
#ourTeam-content {
	width: 100%;
	background: rgba(0,0,0,0.1);
	padding-top: 50px;
	padding-bottom: 50px;
}
#ourTeam-content .container .row .col-sm-4 img {
	width: 75%;
	height: auto;
	max-width: 200px;
}
#ourTeam-content .container .row .col-sm-4 {
	text-align: center;
}
#ourTeam-content .container .row .col-sm-8 {
	padding: 50px;
	padding-top: 0px;
	padding-bottom: 0px;
}
#ourTeam-content .container .row .col-sm-8 p {
	font-size: 18px;
	font-family: Helvetica;
	color: dimgrey;
}
#ourTeam-content .container .row .col-sm-8 ul li {
	font-size: 18px;
	font-family: Helvetica;
	color: dimgrey;
}


/*Contact Us styles*/
#contactUs-header {
  margin: 0;
  /*position: relative;*/
  width: 100%;
  background-color: #aaa;
  height: 200px;
  opacity: 1;
  text-align: center;
  font-family: 'helvetica';
  font-size: 80px;
  font-weight: 100;
  color: #fff;
}
.title {
  /*position: relative;
  top: 40%;
  left: 100px;*/
	float: left;
	margin-top: 75px;
	margin-left: 100px;
}

/* Style Contact Us form */
form label,
form input,
form textarea{
	display: block;
	margin: auto;
	width: 50%;
	max-width: 400px;
	margin-top: 20px;
}
form {
	padding: 20px;
}
form label {
	color: black;
	font-family: futura;
	text-shadow: 0px 1px rgba(0,0,0,0.3);
} 
form input {
	padding: 5px;
	/*border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;*/
	border: none;
	border-bottom: solid 1px #737373;
	outline: none;
	background: none;
}
form input:hover {
	border-bottom: solid 1px black;
}

form textarea {
	/*
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;*/
	height: 150px;
	outline: none;
	border: none;
	border-bottom: solid 1px #737373;
	resize: none;
	background: none;
}
form textarea:hover {
	border-bottom: solid 1px black;
}
fieldset {
	border: 0 none;
}
#forms-container {
	width: 100%;
	background: #f2f2f2;
	/*padding: 20px;*/

}
form input[type="submit"] {
	background: linear-gradient(rgb(0,150,0),rgb(0,83,0));
	background: -moz-linear-gradient(rgb(0,150,0),rgb(0,83,0));
	background: -webkit-linear-gradient(rgb(0,150,0),rgb(0,83,0));
	color: white;
	font-weight: bold;
	padding: 10px 5px 10px 5px;
	font-size: 12px;
	width: 110px;
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}
form input[type="submit"]:hover {
	background: linear-gradient(rgb(0,83,0),rgb(0,150,0));
	background: -webkit-linear-gradient(rgb(0,83,0),rgb(0,150,0));
	background: -moz-linear-gradient(rgb(0,83,0),rgb(0,150,0));
}

/* Format Map */
#map {
        height: 400px;
        width: 60%;
		float: right;
       }
/*Format Location Box and information */
#location-cont {
	width: 40%;
	float: left;
	height: 400px;
	background: white;
}
#location {
	width: 100%;
	height: 100%;
	background: -webkit-linear-gradient(rgba(0,83,0,0.7),rgba(0,100,0,0.7));
	background: -moz-linear-gradient(rgba(0,83,0,0.7),rgba(0,100,0,0.7));
	background: linear-gradient(rgba(0,83,0,0.7),rgba(0,100,0,0.7));
	box-shadow: -5px 0px 5px -1px green;
}
#location-text{
	width: 90%;
	margin: auto;
	text-align: center;
	height: 100%;
	padding-top: 20px;
}
#location-text h2,
#location-text h4 {
	margin: 30px;
	color: rgba(255,255,255,1);
	font-family: times new roman;
	
}

/* Format Footer Styles */
#footer ul li {
	display: inline-block;
	
}
#footer ul li a {
	text-decoration: none;
	color: #737373;
	margin-right: 10px;
	margin-left: 10px;
	font-family: Times New Roman;
}
#footer ul {
	padding-top: 25px;
	display: inline-block;
	float: left;
}
#footer {
	background: rgba(0,0,0,0.8);
	padding-left: 20px;
}
#footer #all-rights {
	display: inline-block;
	margin: auto;
	color: #737373;
	padding: 25px;
	position: relative;
	right: 75px;
}

#footer img {
	width: 100px;
	height: auto;
	vertical-align: middle;
	float: right;
	margin: 20px;
}
#footers #link {
	vertical-align: middle;
	width: 200px;
}
#footer {
	text-align: center;
	border-top: solid 1px black;
	/*position: relative;*/
	/*Can possibly fix map*/
}

